packages/jsii/test/negatives/neg.internal-underscore-interface.3.ts
export interface IMyInterface {
  /** @internal */
  methodWithInternalButNoUnderscore(): string;
}
